fix: fix jump on android

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,18 +5,18 @@ body {
   font-family: "Roboto", sans-serif;
   color: #e1e1e1;
   overflow-x: hidden;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 #___gatsby {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 #gatsby-focus-wrapper {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 input,
